# wallswap-gui

./: .prettierrc  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fetcher_commands.rs  mod.rs  test.rs  test_commands.rs
src-tauri/src/core/: fetcher.rs  mod.rs  models.rs  path.rs  set_wallpaper.rs
src-tauri/src/core/api_result/: app_errors.rs  categories.rs  converters.rs  mod.rs
src-tauri/src/core/app_result/: error.rs  error_categories.rs  mod.rs  result.rs  success.rs
src-tauri/src/core/errors/: app_errors.rs  categories.rs  converters.rs  mod.rs
src-tauri/src/core/utils/: api_result.rs  debug.rs  mod.rs
src-tauri/src/states/: filter_state.rs  main_state.rs  mod.rs
src-tauri/src/wallpaper_delivery_modules/: mod.rs
src-tauri/src/wallpaper_delivery_modules/wallpaperscraft/: filter_parser.rs  mod.rs
src/api/services/: test.service.ts
src/components/modules/ActionsSection/: CollectWallpaperAssemblyModal.tsx  RandomWallpaperModal.tsx  index.tsx
src/components/modules/ActionsSection/hooks/: useTest.ts
src/components/modules/FilterSection/: filters.tsx  index.tsx
src/components/modules/LogSection/: index.tsx
src/components/modules/PicturesSection/: index.tsx
src/components/modules/SettingsSection/: index.tsx
src/components/providers/: theme-provider.tsx
src/components/shared/: toggle-theme.tsx
src/components/ui/: number-input.tsx
src/hooks/: useApiCall.ts  useEvents.ts  useInvoke.ts
src/utils/: api-result.ts
